--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.brsan7.oct">
 
     <application
+        android:name=".application.OctApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_oct"
         android:label="@string/app_name"
