--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.brsan7.oct">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:name=".application.OctApplication"
         android:icon="@drawable/logo_oct"
@@ -23,9 +25,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.brsan7.oct.service.EventosJobService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="false" />
-    </application>
+
+        <receiver
+            android:name=".service.NotificacaoBroadcastReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="NOTIFICATION_PROX_EVENTO" />
+                <action android:name="STARTUP_EVENTOS_DO_DIA" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+</application>
 
 </manifest>
